syntax = "proto3";
package aha;


service aha_service {
  rpc FindOne (Addd) returns (ADdRes) {}
  rpc Login(LoginReq) returns (UserInfo){}
}

message Addd {
  int32 id = 1;
}

message ADdRes {
  int32 id = 1;
  string name = 2;
}

message UserInfo{
  optional string name=1;
  optional int32 age=2;
  optional int32 mony=3;
}
message LoginReq{
  optional UserInfo userInfo=1;
  repeated string token=2;
}

message LoginRsp{
  
}